Fixed spades from wrapping

--- a/app/assets/stylesheets/components/text.scss
+++ b/app/assets/stylesheets/components/text.scss
@@ -1,3 +1,7 @@
 .instructions {
   white-space: pre-wrap;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
